parser/y.output

state 0
	$accept: .program $end 

	FROM  shift 5
	.  error

	program  goto 1
	transforms  goto 2
	transform  goto 3
	fromClause  goto 4

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  transforms.    (1)
	transforms:  transforms.transform 

	FROM  shift 5
	.  reduce 1 (src line 30)

	transform  goto 6
	fromClause  goto 4

state 3
	transforms:  transform.    (3)

	.  reduce 3 (src line 41)


state 4
	transform:  fromClause.whereClauseOpt selectClause 
	whereClauseOpt: .    (8)

	WHERE  shift 9
	.  reduce 8 (src line 73)

	whereClause  goto 8
	whereClauseOpt  goto 7

state 5
	fromClause:  FROM.PATH 

	PATH  shift 10
	.  error


state 6
	transforms:  transforms transform.    (2)

	.  reduce 2 (src line 36)


state 7
	transform:  fromClause whereClauseOpt.selectClause 

	SELECT  shift 12
	.  error

	selectClause  goto 11

state 8
	whereClauseOpt:  whereClause.    (7)

	.  reduce 7 (src line 68)


state 9
	whereClause:  WHERE.expr 

	ID  shift 19
	NUM  shift 21
	STR  shift 22
	PATH  shift 20
	'('  shift 18
	.  error

	expr  goto 13
	pathExpr  goto 16
	literalExpr  goto 17
	callExpr  goto 15
	binaryExpr  goto 14

state 10
	fromClause:  FROM PATH.    (5)

	.  reduce 5 (src line 56)


state 11
	transform:  fromClause whereClauseOpt selectClause.    (4)

	.  reduce 4 (src line 46)


state 12
	selectClause:  SELECT.columns 

	ID  shift 27
	STR  shift 26
	.  error

	columns  goto 23
	column  goto 24
	columnName  goto 25

state 13
	whereClause:  WHERE expr.    (6)
	binaryExpr:  expr.'+' expr 
	binaryExpr:  expr.'-' expr 
	binaryExpr:  expr.'*' expr 
	binaryExpr:  expr.DIVOP expr 
	binaryExpr:  expr.'%' expr 

	'+'  shift 28
	'-'  shift 29
	'*'  shift 30
	DIVOP  shift 31
	'%'  shift 32
	.  reduce 6 (src line 62)


state 14
	expr:  binaryExpr.    (15)

	.  reduce 15 (src line 112)


state 15
	expr:  callExpr.    (16)

	.  reduce 16 (src line 114)


state 16
	expr:  pathExpr.    (17)

	.  reduce 17 (src line 115)


state 17
	expr:  literalExpr.    (18)

	.  reduce 18 (src line 116)


state 18
	expr:  '('.expr ')' 

	ID  shift 19
	NUM  shift 21
	STR  shift 22
	PATH  shift 20
	'('  shift 18
	.  error

	expr  goto 33
	pathExpr  goto 16
	literalExpr  goto 17
	callExpr  goto 15
	binaryExpr  goto 14

state 19
	callExpr:  ID.'(' callParamsOpt ')' 

	'('  shift 34
	.  error


state 20
	pathExpr:  PATH.    (20)

	.  reduce 20 (src line 122)


state 21
	literalExpr:  NUM.    (21)

	.  reduce 21 (src line 128)


state 22
	literalExpr:  STR.    (22)

	.  reduce 22 (src line 133)


state 23
	selectClause:  SELECT columns.    (9)
	columns:  columns.',' column 

	','  shift 35
	.  reduce 9 (src line 77)


state 24
	columns:  column.    (11)

	.  reduce 11 (src line 88)


state 25
	column:  columnName.expr 

	ID  shift 19
	NUM  shift 21
	STR  shift 22
	PATH  shift 20
	'('  shift 18
	.  error

	expr  goto 36
	pathExpr  goto 16
	literalExpr  goto 17
	callExpr  goto 15
	binaryExpr  goto 14

state 26
	columnName:  STR.':' 

	':'  shift 37
	.  error


state 27
	columnName:  ID.':' 

	':'  shift 38
	.  error


state 28
	binaryExpr:  expr '+'.expr 

	ID  shift 19
	NUM  shift 21
	STR  shift 22
	PATH  shift 20
	'('  shift 18
	.  error

	expr  goto 39
	pathExpr  goto 16
	literalExpr  goto 17
	callExpr  goto 15
	binaryExpr  goto 14

state 29
	binaryExpr:  expr '-'.expr 

	ID  shift 19
	NUM  shift 21
	STR  shift 22
	PATH  shift 20
	'('  shift 18
	.  error

	expr  goto 40
	pathExpr  goto 16
	literalExpr  goto 17
	callExpr  goto 15
	binaryExpr  goto 14

state 30
	binaryExpr:  expr '*'.expr 

	ID  shift 19
	NUM  shift 21
	STR  shift 22
	PATH  shift 20
	'('  shift 18
	.  error

	expr  goto 41
	pathExpr  goto 16
	literalExpr  goto 17
	callExpr  goto 15
	binaryExpr  goto 14

state 31
	binaryExpr:  expr DIVOP.expr 

	ID  shift 19
	NUM  shift 21
	STR  shift 22
	PATH  shift 20
	'('  shift 18
	.  error

	expr  goto 42
	pathExpr  goto 16
	literalExpr  goto 17
	callExpr  goto 15
	binaryExpr  goto 14

state 32
	binaryExpr:  expr '%'.expr 

	ID  shift 19
	NUM  shift 21
	STR  shift 22
	PATH  shift 20
	'('  shift 18
	.  error

	expr  goto 43
	pathExpr  goto 16
	literalExpr  goto 17
	callExpr  goto 15
	binaryExpr  goto 14

state 33
	expr:  '(' expr.')' 
	binaryExpr:  expr.'+' expr 
	binaryExpr:  expr.'-' expr 
	binaryExpr:  expr.'*' expr 
	binaryExpr:  expr.DIVOP expr 
	binaryExpr:  expr.'%' expr 

	')'  shift 44
	'+'  shift 28
	'-'  shift 29
	'*'  shift 30
	DIVOP  shift 31
	'%'  shift 32
	.  error


state 34
	callExpr:  ID '('.callParamsOpt ')' 
	callParamsOpt: .    (25)

	ID  shift 19
	NUM  shift 21
	STR  shift 22
	PATH  shift 20
	'('  shift 18
	.  reduce 25 (src line 152)

	expr  goto 47
	pathExpr  goto 16
	literalExpr  goto 17
	callExpr  goto 15
	callParamsOpt  goto 45
	callParams  goto 46
	binaryExpr  goto 14

state 35
	columns:  columns ','.column 

	ID  shift 27
	STR  shift 26
	.  error

	column  goto 48
	columnName  goto 25

state 36
	column:  columnName expr.    (12)
	binaryExpr:  expr.'+' expr 
	binaryExpr:  expr.'-' expr 
	binaryExpr:  expr.'*' expr 
	binaryExpr:  expr.DIVOP expr 
	binaryExpr:  expr.'%' expr 

	'+'  shift 28
	'-'  shift 29
	'*'  shift 30
	DIVOP  shift 31
	'%'  shift 32
	.  reduce 12 (src line 93)


state 37
	columnName:  STR ':'.    (13)

	.  reduce 13 (src line 102)


state 38
	columnName:  ID ':'.    (14)

	.  reduce 14 (src line 107)


state 39
	binaryExpr:  expr.'+' expr 
	binaryExpr:  expr '+' expr.    (28)
	binaryExpr:  expr.'-' expr 
	binaryExpr:  expr.'*' expr 
	binaryExpr:  expr.DIVOP expr 
	binaryExpr:  expr.'%' expr 

	.  reduce 28 (src line 166)


state 40
	binaryExpr:  expr.'+' expr 
	binaryExpr:  expr.'-' expr 
	binaryExpr:  expr '-' expr.    (29)
	binaryExpr:  expr.'*' expr 
	binaryExpr:  expr.DIVOP expr 
	binaryExpr:  expr.'%' expr 

	.  reduce 29 (src line 175)


state 41
	binaryExpr:  expr.'+' expr 
	binaryExpr:  expr.'-' expr 
	binaryExpr:  expr.'*' expr 
	binaryExpr:  expr '*' expr.    (30)
	binaryExpr:  expr.DIVOP expr 
	binaryExpr:  expr.'%' expr 

	.  reduce 30 (src line 183)


state 42
	binaryExpr:  expr.'+' expr 
	binaryExpr:  expr.'-' expr 
	binaryExpr:  expr.'*' expr 
	binaryExpr:  expr.DIVOP expr 
	binaryExpr:  expr DIVOP expr.    (31)
	binaryExpr:  expr.'%' expr 

	.  reduce 31 (src line 191)


state 43
	binaryExpr:  expr.'+' expr 
	binaryExpr:  expr.'-' expr 
	binaryExpr:  expr.'*' expr 
	binaryExpr:  expr.DIVOP expr 
	binaryExpr:  expr.'%' expr 
	binaryExpr:  expr '%' expr.    (32)

	.  reduce 32 (src line 199)


state 44
	expr:  '(' expr ')'.    (19)

	.  reduce 19 (src line 117)


state 45
	callExpr:  ID '(' callParamsOpt.')' 

	')'  shift 49
	.  error


state 46
	callParamsOpt:  callParams.    (24)
	callParams:  callParams.',' expr 

	','  shift 50
	.  reduce 24 (src line 147)


state 47
	callParams:  expr.    (27)
	binaryExpr:  expr.'+' expr 
	binaryExpr:  expr.'-' expr 
	binaryExpr:  expr.'*' expr 
	binaryExpr:  expr.DIVOP expr 
	binaryExpr:  expr.'%' expr 

	'+'  shift 28
	'-'  shift 29
	'*'  shift 30
	DIVOP  shift 31
	'%'  shift 32
	.  reduce 27 (src line 161)


state 48
	columns:  columns ',' column.    (10)

	.  reduce 10 (src line 83)


state 49
	callExpr:  ID '(' callParamsOpt ')'.    (23)

	.  reduce 23 (src line 138)


state 50
	callParams:  callParams ','.expr 

	ID  shift 19
	NUM  shift 21
	STR  shift 22
	PATH  shift 20
	'('  shift 18
	.  error

	expr  goto 51
	pathExpr  goto 16
	literalExpr  goto 17
	callExpr  goto 15
	binaryExpr  goto 14

state 51
	callParams:  callParams ',' expr.    (26)
	binaryExpr:  expr.'+' expr 
	binaryExpr:  expr.'-' expr 
	binaryExpr:  expr.'*' expr 
	binaryExpr:  expr.DIVOP expr 
	binaryExpr:  expr.'%' expr 

	'+'  shift 28
	'-'  shift 29
	'*'  shift 30
	DIVOP  shift 31
	'%'  shift 32
	.  reduce 26 (src line 156)


19 terminals, 18 nonterminals
33 grammar rules, 52/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
67 working sets used
memory: parser 81/30000
24 extra closures
91 shift entries, 1 exceptions
28 goto entries
38 entries saved by goto default
Optimizer space used: output 56/30000
56 table entries, 0 zero
maximum spread: 19, maximum offset: 50
